# ivs-record

./: README.md
ivs-record/: .cproject  .project
ivs-record/src/: CMakeLists.txt
ivs-record/src/AUDIO_CORE/: AIUITest.cpp  AIUITest.h  demo.cpp
ivs-record/src/AUDIO_CORE/audio/: AudioProvider.cpp
ivs-record/src/AUDIO_CORE/utils/file/: FileUtil.cpp  FileUtil.h
src/AUDIO_CORE/: AIUITest.h
src/AUDIO_CORE/audio/: AudioProvider.h
src/AUDIO_CORE/audio/thread/: AudioListenThread.cpp  AudioListenThread.h
