CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

MESSAGE(${PROJECT_SOURCE_DIR})

INCLUDE_DIRECTORIES (/usr/include/alsa)

INCLUDE_DIRECTORIES (utils)
INCLUDE_DIRECTORIES (utils/file)

FILE (GLOB_RECURSE SRC_LIST  "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.c" "${CMAKE_CURRENT_SOURCE_DIR}/*.cc"   )


#SET (CMAKE_C_FLAGS " -DHAVE_PTHREADS -DAIUI_LIB_COMPILING -O2 ")
#SET (CMAKE_CXX_FLAGS "-DHAVE_PTHREADS -DAIUI_LIB_COMPILING -O2 ")


LINK_DIRECTORIES (${LINK_LIB_DIR})

ADD_EXECUTABLE (ivs-record ${SRC_LIST})

TARGET_LINK_LIBRARIES(ivs-record asound  pthread)









